--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
+    "daisyui": "^4.6.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.34",
