--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GOOGLE_CLIENT_ID=877541620764-hp0k3ip72609mu87qacec3d12h7ufthe.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+FIREBASE_API_KEY = AIzaSyCHdgTgWVhQg_ya10Fer4pTA68G_0wegQc
